Fixed responsive navbar, due to new icons Since icons were not wrapped in span tags, the responsive navbar broke. Edited responsive portion of css

--- a/src/css/icons.scss
+++ b/src/css/icons.scss
@@ -1,9 +1,4 @@
-// All icons have the "regular" class
-.navIcon {
-  width: 24px;
-  height: 24px;
-
-}
+//.navIcon style in navigation.scss
 
 // All feather icons have the "featherIcon" class (don't know why I need to wite path, circle, line, etc)
 .featherIcon, .featherIcon path, .featherIcon circle, .featherIcon line, .featherIcon polyline {
